--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "test": "ts-node ./tests/functionTester.ts"
+    "uiTestingPlayground": "tsx ./src/tests/uiTestingPlayground.test.ts",
+    "uiTestingPlayground_only": "tsx --test-only ./src/tests/uiTestingPlayground.test.ts"
   },
   "keywords": [],
-  "author": "",
+  "author": "AlexB",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^20.8.9",
-    "puppeteer": "^21.4.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "@types/node": "^20.14.2",
+    "puppeteer": "^22.10.0",
+    "tsx": "^4.13.3",
+    "typescript": "^5.4.5",
+    "user-agents": "^2.0.0-alpha.5"
   }
 }
