--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@types/node": "^20.14.2",
     "puppeteer": "^22.10.0",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "tsx": "^4.13.3",
     "typescript": "^5.4.5",
     "user-agents": "^2.0.0-alpha.5"
