--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "uiTestingPlayground_only": "tsx --test-only ./src/tests/uiTestingPlayground.test.ts",
     "uiTestingPlayground": "tsx ./src/tests/uiTestingPlayground.test.ts",
+    "automationExercise_only": "tsx ./src/tests/automationExerciseApi.test.ts",
+    "automationExercise": "tsx ./src/tests/automationExerciseApi.test.ts",
     "devexpress": "tsx ./src/tests/devexpress.test.ts",
     "infiniteScroll": "tsx ./src/tests/infiniteScroll.test"
   },
