tls auth test example

--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "uiTestingPlayground": "tsx ./src/tests/uiTestingPlayground.test.ts",
     "automationExercise_only": "tsx ./src/tests/automationExerciseApi.test.ts",
     "automationExercise": "tsx ./src/tests/automationExerciseApi.test.ts",
-    "devexpress": "tsx ./src/tests/devexpress.test.ts",
-    "infiniteScroll": "tsx ./src/tests/infiniteScroll.test"
+    "devExpress": "tsx ./src/tests/devexpress.test.ts",
+    "infiniteScroll": "tsx ./src/tests/infiniteScroll.test",
+    "tlsAuth": "tsx ./src/tests/tlsClientAuthentication.test.ts"
   },
   "keywords": [],
   "author": "Alexandru Bajan",
