--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "Sample test project",
+  "name": "home-made-puppeteer",
   "version": "1.0.0",
-  "description": "",
+  "description": "Sample test project",
   "main": "index.ts",
   "scripts": {
     "uiTestingPlayground_only": "tsx --test-only ./src/tests/uiTestingPlayground.test.ts",
     "uiTestingPlayground": "tsx ./src/tests/uiTestingPlayground.test.ts",
     "automationExercise_only": "tsx --test-only ./src/tests/automationExerciseApi.test.ts",
     "automationExercise": "tsx ./src/tests/automationExerciseApi.test.ts",
-    "devExpress": "tsx ./src/tests/devexpress.test.ts",
+    "automationExerciseWebApp": "tsx ./src/tests/automationExerciseWebApp.test.ts",
+    "devExpress": "tsx ./src/tests/devExpress.test.ts",
     "infiniteScroll": "tsx ./src/tests/infiniteScroll.test",
     "tlsAuth": "tsx ./src/tests/tlsClientAuthentication.test.ts",
     "tlsAuth_only": "tsx --test-only ./src/tests/tlsClientAuthentication.test.ts"
@@ -20,6 +21,8 @@
     "@types/node": "^20.14.2",
     "axios": "^1.7.2",
     "puppeteer": "^22.11.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-adblocker": "^2.13.6",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.15.5",
